2025-04-27  Bruno Haible  <bruno@clisp.org>

	Fix most gcc -Wimplicit-fallthrough warnings.
	* Makefile.devel (GNULIB_CORE): Add 'attribute'.
	* lispbibl.d: Include attribute.h.
	* eval.d: Silence -Wimplicit-fallthrough warnings.
	* foreign.d (foreign_pointer): Add 'FALLTHROUGH;' statement.
	* stream.d (interactive_stream_p, READ-BYTE-NO-HANG): Likewise.
	* lisparit.d (read_float): Likewise.
	* intelem.d (I_to_UL, I_to_UQ): Likewise.
	* io.d (GET-MACRO-CHARACTER, test_number_syntax, PARSE-INTEGER,
	pr_real_number): Likewise.
	* charstrg.d: Use 'FALLTHROUGH;' statements.
	* hashtabl.d: Likewise.
	* pathname.d: Likewise.
	* spvw.d: Likewise.

2025-04-27  Bruno Haible  <bruno@clisp.org>

	Fix a gcc -Wformat-overflow warning.
	* utils/varbrace.c (line_repeat_else, line_repeat_endif): Make buf
	larger.

2025-04-27  Bruno Haible  <bruno@clisp.org>

	Fix a gcc warning "macro ‘__DATE__’ might prevent reproducible builds".
	* genclisph.d (main): Don't store a time stamp in clisp-test.c; its
	time stamp on disk is sufficient.

2025-04-26  Bruno Haible  <bruno@clisp.org>

	Work around a gcc 15.1.0 bug on x86_64.
	* package.d (rehash_symtab): When compiled by GCC 15, disable all
	optimizations.

2024-12-28  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* Makefile.devel (GNULIB_CORE): Use the new names of renamed gnulib
	modules.

2024-12-05  Bruno Haible  <bruno@clisp.org>

	Revisit Linux/riscv64 builds.
	* Makefile.devel (multibuild-linux-riscv64): Enable all build variants
	that work.

2024-11-23  Bruno Haible  <bruno@clisp.org>

	Upgrade ASDF. This fixes a bug on Haiku.
	Reported by Alexandru Popa <alpopa@gmail.com>
	in <https://sourceforge.net/p/clisp/mailman/message/58844235/>.
	* modules/asdf/asdf.lisp: Upgrade to upstream 3.3.6.7.
	* modules/asdf/asdf.xml: Update.
	* doc/impnotes.html: Regenerated.

2024-11-19  Bruno Haible  <bruno@clisp.org>

	Add comments.
	* Makefile.devel (build-porting*): Add comments regarding *_WORKS macros
	in lispbibl.d.
